Fix "After compact action mail list disappears", by ensuring that the folder is open in the two places where it may be needed.

BUG:146967

svn path=/branches/KDE/3.5/kdepim/; revision=733841